# hashline

./: .gitignore  CHANGELOG.md  CLAUDE.md  QUICKSTART.md  README.md  prompt.md  pyproject.toml
.github/workflows/: ci.yml
docs/: SKILL.md
hashline/: __init__.py  __main__.py  cli.py  compose.py  hashline.py  inject_claude.py
hashline.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  top_level.txt
prompts/: agent_prompts.md  base.md  claude.md  deepseek.md  gemini.md  grok.md  kimi.md
scripts/: compose_prompt.py
tests/: harness_demo.py  test_hashline.py
