[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "hashline"
version = "0.1.0"
description = "Hash-anchored edit harness for LLM coding agents. Stable line edits using content hashes. Works great with Grok, Claude, DeepSeek, Gemini, Kimi and others."
readme = "README.md"
requires-python = ">=3.8"
license = {text = "MIT"}
authors = [{name = "Based on work by Can Bölük, extracted and extended"}]

[project.optional-dependencies]
test = ["pytest"]
dev = ["ruff", "mypy"]

[project.scripts]
hashline = "hashline.cli:main"

[project.urls]
Homepage = "https://github.com/chokmah-me/hashline"
Repository = "https://github.com/chokmah-me/hashline"

[tool.setuptools.packages.find]
where = ["."]
