[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "hashline"
version = "0.2.0"
description = "Hash-anchored edit harness for LLM coding agents. Stable line edits using content hashes. Works great with Grok, Claude, DeepSeek, Gemini, Kimi and others."
readme = "README.md"
license = "MIT"
requires-python = ">=3.8"
authors = [{name = "Based on work by Can Bölük, extracted and extended"}]

[project.optional-dependencies]
# 'test' is used by both the regular test suite and the end-to-end harness_demo
# (see tests/harness_demo.py and the 'demo' CI job)
test = ["pytest"]
dev = ["ruff", "mypy"]

[project.scripts]
hashline = "hashline.cli:main"

[project.urls]
Homepage = "https://github.com/chokmah-me/hashline"
Repository = "https://github.com/chokmah-me/hashline"

[tool.setuptools.packages.find]
where = ["."]
